# tf-rmm

./: .clang-tidy  .gitmodules  CMakeLists.txt  Makefile-cbmc  main
.github/: pr_message.md
cmake/: BuildCppUTest.cmake  CommonConfigs.cmake  CoverageReport.cmake
cmake/Modules/: ArmTargetLinkerScript.cmake  CoverageReport.cmake  UnitTestFramework.cmake
configs/: fvp_defcfg.cmake  host_defcfg.cmake  rdfremont_defcfg.cmake
configs/libspdm/: 0001-cryptlib_mbedtls-use-external-Mbed-TLS.patch  0002-cryptlib_mbedtls-use-mbedtls-3.4.0.patch  0002-fix-build-Wincompatible_pointer_types-errors.patch  0002-get_certificate-do-not-store-cert_chain-content.patch  0003-add-LIBSPDM_DATA_PEER_USED_CERT_CHAIN_PUBLIC_KEY.patch  0003-debuglib-fix-build-error-variable-status-set-but-not.patch  0003-force-LIBSPDM_CONFIG-definition.patch  0003-unit_test-add-mbedtls-heap-init-in-test_crypt.patch  0004-fix-few-build-errors.patch  0004-unit_test-compile-test_crypt-as-a-library.patch  0005-unit_test-compile-test_crypt-as-a-library.patch  libspdm_config.h  rmm_libspdm_config.h
configs/mbedtls/: 0001-Remove-compiler-option-Wunreachable-code-for-clang.patch  0003-fix-unused-function-md_type_to_string.patch  0003-force-MBEDTLS_CONFIG_FILE-definition.patch  0004-fix-remove-link_to_source-calls.patch  mbedtls_config.h  rmm_mbedtls_config.h
configs/t_cose/: 0001-Add-compile-time-option-for-HES-signing.patch
docs/: conf.py  glossary.rst  index.rst  readme.rst  requirements.txt
docs/about/: change-log.rst  maintainers.rst
docs/design/: cold-and-warm-boot-design.rst  memory-management.rst
docs/getting_started/: build-options.rst  building-with-shrinkwrap.rst  getting-started.rst
docs/process/: coding-standard.rst  commit-style.rst  contributing.rst
docs/threat_model/: dfd.rst  index.rst  threat_analysis.rst  threat_assessment.rst
drivers/pcie_tdi/: CMakeLists.txt
drivers/pcie_tdi/include/: cma_spdm.h
drivers/pcie_tdi/src/: cma_spdm.c  pcie_tdi.c
drivers/pcie_tdi/src/include/: cma_spdm.h  cma_spdm_private.h  pcie_tdi_private.h
lib/: CMakeLists.txt
lib/allocator/: CMakeLists.txt
lib/allocator/include/: memory_alloc.h
lib/allocator/src/: memory_alloc.c
lib/arch/: CMakeLists.txt
lib/attestation/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/: platform_api.h  simd_def.h  sizes.h  status.h  utils_def.h
lib/common/include/fake_host/: host_harness.h
lib/console/: CMakeLists.txt
lib/da_interface/: CMakeLists.txt
lib/da_interface/include/: da_interface.h
lib/da_interface/src/: da_interface.c
lib/debug/: CMakeLists.txt
lib/debug/include/: debug.h
lib/debug/src/: backtrace.c
lib/gic/: CMakeLists.txt
lib/granule/: CMakeLists.txt
lib/libc/: CMakeLists.txt
lib/libc/include/aarch64/: context.h
lib/libc/include/fake_host/: context.h
lib/libc/src/: assert.c  printf.c  strchr.c
lib/libc/src/aarch64/: context.S  context_helpers.c
lib/mbedtls/: CMakeLists.txt
lib/measurement/: CMakeLists.txt
lib/metadata/: CMakeLists.txt
lib/metadata/include/: metadata.h
lib/metadata/src/: metadata.c
lib/pauth/: CMakeLists.txt
lib/pauth/include/: pauth.h
lib/pauth/src/: pauth_core.c
lib/pauth/src/aarch64/: pauth_arch.S  pauth_core.c  pauth_pvt.h
lib/pauth/src/fake_host/: pauth_fake_host.c  pauth_pvt.h
lib/queue/: CMakeLists.txt
lib/queue/include/: queue.h
lib/queue/src/: queue.c
lib/queue/tests/: CMakeLists.txt  queue_tests.cpp
lib/rmm_el3_ifc/: CMakeLists.txt
lib/rmm_el3_ifc/include/: rmm_el3_ifc.h
lib/rmm_el3_ifc/src/: rmm_el3_ifc.c  rmm_el3_ifc_manifest.c  rmm_el3_ifc_priv.h  rmm_el3_runtime.c
lib/rmm_el3_ifc/src/aarch64/: rmm_el3_ifc_helpers.c
lib/rmm_el3_ifc/src/fake_host/: rmm_el3_ifc_helpers.c
lib/sealing/: CMakeLists.txt
lib/sealing/include/: sealing.h
lib/sealing/src/: sealing.c
lib/spdm_requester/: CMakeLists.txt
lib/spdm_requester/arm_stub/spdm_malloclib/: CMakeLists.txt  spdm_malloclib.c
lib/spdm_requester/arm_stub/spdm_rnglib/: CMakeLists.txt  spdm_rnglib.c
lib/spdm_requester/arm_stub/spdm_timelib/: CMakeLists.txt  spdm_time.c
lib/spdm_requester/tests/: CMakeLists.txt  spdm_requester_tests.cpp
lib/t_cose/: CMakeLists.txt
lib/t_cose/include/: t_cose_rmm_el3_crypto.h  t_cose_rmm_hes_crypto.h
lib/t_cose/src/: t_cose_rmm_el3_crypto.c  t_cose_rmm_hes_crypto.c
plat/common/: CMakeLists.txt
plat/common/include/: plat_common.h  plat_import_sym.h
plat/common/src/: plat_common_init.c  plat_granule.c  plat_memory.c  plat_setup.c
plat/common/src/fake_host/: plat_cmn_arch.h
plat/host/host_build/: CMakeLists.txt
plat/host/host_build/src/: host_crypto_utils.h  host_da.c  host_da_crypto_utils.c  host_debug.c  host_rmi_wrappers.c  host_rmi_wrappers_private.h  host_setup.c  host_spdm_rsp_ifc.c  host_spdm_rsp_ifc.h
plat/host/host_cbmc/: CMakeLists.txt
plat/host/host_cbmc/include/: host_defs.h  tb_common.h  tb_granules.h  tb_realm.h  tb_rec.h
plat/host/host_cbmc/src/: host_harness.c  plat_init.c  tb_arch_features.c  tb_attest.c  tb_common.c  tb_granules.c  tb_other.c  tb_realm.c  tb_rec.c  tb_rim.c  tb_rsi.c  tb_rtt.c  tb_simd.c  tb_xlat.c
plat/host/host_fuzz/: CMakeLists.txt  README.md
plat/host/host_fuzz/python/: data_type.py  generate_corpus.py  mutate.py
plat/host/host_fuzz/src/: host_ns_access.c  host_setup.c
plat/host/host_ns_smc_fuzzer/: CMakeLists.txt  README.md
plat/host/host_ns_smc_fuzzer/python/: data_type.py  generate_default_test.py  mutate.py  parser.py
plat/host/host_ns_smc_fuzzer/src/: fuzzer_protocol.h  host_setup.c
plat/host/host_test/: CMakeLists.txt
plat/host/host_test/include/: plat_test_harness.h  platform.h  test_helpers.h
plat/host/host_test/src/: cpputest_ifc.cpp  cpputest_ifc.h  host_harness.c  test_groups.h.in  test_harness.c  test_helpers.c  test_helpers_private.cpp  test_helpers_private.h  test_private.h  utest_exit.cpp
plat/rdfremont/: CMakeLists.txt
plat/rdfremont/src/: rdfremont_setup.c
plat/rdfremont/src/include/: plat_private.h  rdfremont_private.h
runtime/: CMakeLists.txt  linker.lds
toolchains/: common.cmake
tools/: CMakeLists.txt
(+411 files in other folders)
